# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: testing.yml
gendiff/: builder.py  gendiff.py  parsers.py
gendiff/formatters/: __init__.py  json.py  plain.py
gendiff/parsers/: parser.py
gendiff/renderers/: renderer.py
gendiff/scripts/: cli.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/ini/: test02_after.ini  test02_before.ini
tests/fixtures/json/: test02_after.json  test02_before.json  test03_after.json  test03_before.json
tests/fixtures/yaml/: test01_after.yaml  test01_before.yaml  test02_after.yaml  test02_before.yaml
