[tool.poetry]
name = "alekgit_gendiff"
version = "0.2.0"
description = "A command-line program gendiff"
authors = ["alekgit <shalek.edu@yandex.ru>"]
repository = "https://github.com/alekgit/python-project-lvl2.git"
packages = [
  { include = "gendiff" },
]
classifiers=[
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
